--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1XoibvZrhn4uu2k3S_GuQe6j71Z7x9ZEg",
-      "authorship_tag": "ABX9TyPqkWIabrN4qtnlDHd+W/iH",
+      "authorship_tag": "ABX9TyPOH3rvX68DicRS3oxjEiyB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -877,7 +877,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***The Descision Tree Classifier is created and is visaulized graphically. Also the prediction was calculated using decision tree algorithm and accuracy of the model was evaluated.***"
+        "# **The Decision Tree Classifier is created and is visaulized graphically. Also the prediction was calculated using decision tree algorithm and accuracy of the model was evaluated.**"
       ],
       "metadata": {
         "id": "FHHN47Bp9Egb"
